--- a/.gitignore
+++ b/.gitignore
@@ -1,44 +1,38 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Legacy files and folders (will be removed after migration)
+# app/
+# components/
+# lib/
+# graphql/
+# prisma/
+# public/
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
+# Dependencies
+node_modules/
 
-# testing
-/coverage
+# Build outputs
+.next/
+dist/
 
-# next.js
-/.next/
-/out/
+# Environment files
+.env
+.env.local
+.env.*.local
 
-# production
-/build
-
-# misc
-.DS_Store
-*.pem
-
-# debug
+# Debug logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
 
-# env files
-.env*
-!.env.example
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
 
-# vercel
-.vercel
+# OS
+.DS_Store
+Thumbs.db
 
-# typescript
-*.tsbuildinfo
-next-env.d.ts
-
-/lib/generated/prisma
+# Misc
+*.log
+*.pem
