--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "db:migrate": "cd server && npm run db:migrate",
     "db:push": "cd server && npm run db:push",
     "db:studio": "cd server && npm run db:studio",
+    "db:seed": "cd server && npm run db:seed",
     "lint": "cd client && npm run lint",
     "prepare": "husky"
   },
