--- a/server/package.json
+++ b/server/package.json
@@ -11,14 +11,14 @@
     "db:migrate": "prisma migrate dev",
     "db:push": "prisma db push",
     "db:studio": "prisma studio",
+    "db:seed": "tsx prisma/seed.ts",
     "lint": "eslint . --fix"
   },
   "dependencies": {
     "@apollo/server": "^4.11.3",
     "@graphql-tools/merge": "^9.0.22",
     "@graphql-tools/schema": "^10.0.17",
-    "@neondatabase/serverless": "^1.0.2",
-    "@prisma/adapter-neon": "^7.3.0",
+    "@prisma/adapter-pg": "^7.4.1",
     "@prisma/client": "^7.3.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
@@ -26,7 +26,7 @@
     "graphql": "^16.10.0",
     "graphql-tag": "^2.12.6",
     "jsonwebtoken": "^9.0.2",
-    "ws": "^8.19.0"
+    "pg": "^8.18.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
@@ -35,6 +35,7 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20.17.14",
+    "@types/pg": "^8.16.0",
     "@types/ws": "^8.18.1",
     "@typescript-eslint/eslint-plugin": "^8.54.0",
     "@typescript-eslint/parser": "^8.54.0",
