--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "@prisma/client": "^7.3.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "dotenv": "^17.3.1",
     "express": "^4.21.2",
     "graphql": "^16.10.0",
     "graphql-tag": "^2.12.6",
